[tool.poetry]
name = "nonebot_plugin_bilifan"
version = "0.3.3"
description = "刷站粉丝牌子的机器人插件"
authors = ["Agnes_Digital <Z735803792@163.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/Agnes4m/nonebot_plugin_bilifan"
repository = "https://github.com/Agnes4m/nonebot_plugin_bilifan"
keywords = ["bilibili", "nonebot2", "plugin"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE","README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.1.0"
nonebot-adapter-onebot = ">=2.1.5"
nonebot_plugin_apscheduler = ">=0.3.0"
nonebot-plugin-send-anything-anywhere = ">=0.3.2"
pillow = "<=9.5.0"
aiohttp-socks = "^0.8.0"
pyyaml = "^6.0"
qrcode = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 89
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
# skip-string-normalization = true

[tool.ruff]
extend-exclude = [
    "./packages/nonebot-plugin-rimofun/nonebot_plugin_rimofun/bnhhsh",
    "./packages/nonebot-plugin-rimofun/nonebot_plugin_rimofun/not_translator",
    "./packages/nb-cli-plugin-bootstrap/nb_cli_plugin_bootstrap/templates/bootstrap",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"private/nonebot-plugin-send-anything-anywhere/*.py" = [
    "I001",
    "A001",
    "A002",
    "A003",
    "N818",
    "ARG001",
    "ARG004",
    "SLF001",
]
"private/adapter-telegram/*.py" = [
    "I001",
    "A001",
    "A002",
    "A003",
    "B010",
    "N818",
    "ARG001",
    "ARG004",
    "COM812",
    "SLF001",
    "COM812",
]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true